// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 1: Simple Component/Task Archived 1`] = `
<div
  class="list-item"
>
  <input
    readonly="readonly"
    type="text"
  />
</div>
`;

exports[`Storyshots 1: Simple Component/Task Default 1`] = `
<div
  class="list-item"
>
  <input
    readonly="readonly"
    type="text"
  />
</div>
`;

exports[`Storyshots 1: Simple Component/Task Pinned 1`] = `
<div
  class="list-item"
>
  <input
    readonly="readonly"
    type="text"
  />
</div>
`;

exports[`Storyshots 2: Simple Component - Build out the States/Task Archived 1`] = `
<div
  class="list-item TASK_ARCHIVED"
>
  <label
    class="checkbox"
  >
    <input
      disabled="disabled"
      name="checked"
      type="checkbox"
    />
     
    <span
      class="checkbox-custom"
    />
  </label>
   
  <div
    class="title"
  >
    <input
      placeholder="Input title"
      readonly="readonly"
      type="text"
    />
  </div>
   
  <div
    class="actions"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots 2: Simple Component - Build out the States/Task Default 1`] = `
<div
  class="list-item TASK_INBOX"
>
  <label
    class="checkbox"
  >
    <input
      disabled="disabled"
      name="checked"
      type="checkbox"
    />
     
    <span
      class="checkbox-custom"
    />
  </label>
   
  <div
    class="title"
  >
    <input
      placeholder="Input title"
      readonly="readonly"
      type="text"
    />
  </div>
   
  <div
    class="actions"
  >
    <a>
      <span
        class="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots 2: Simple Component - Build out the States/Task Pinned 1`] = `
<div
  class="list-item TASK_PINNED"
>
  <label
    class="checkbox"
  >
    <input
      disabled="disabled"
      name="checked"
      type="checkbox"
    />
     
    <span
      class="checkbox-custom"
    />
  </label>
   
  <div
    class="title"
  >
    <input
      placeholder="Input title"
      readonly="readonly"
      type="text"
    />
  </div>
   
  <div
    class="actions"
  >
    <a>
      <span
        class="icon-star"
      />
    </a>
  </div>
</div>
`;
